<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_columnSpan="5"
    android:layout_gravity="center"
    android:background="@color/yellow"
    app:columnCount="4"
    app:orientation="horizontal"
    tools:context=".FragmentKeyboard">

    <Button
        android:id="@+id/ButtonDelete"
        style="@style/btnKeyboardStyle"
        app:layout_column="1"
        app:layout_row="0"
        android:text="@string/btnX" />

    <Button
        android:id="@+id/ButtonClear"
        style="@style/btnKeyboardStyle"
        app:layout_column="2"
        app:layout_row="0"
        android:text="@string/btnClear" />

    <Button
        android:id="@+id/Button7"
        style="@style/btnKeyboardStyle"
        app:layout_column="0"
        app:layout_row="1"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/Button8"
        style="@style/btnKeyboardStyle"
        app:layout_column="1"
        app:layout_row="1"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/Button9"
        style="@style/btnKeyboardStyle"
        app:layout_column="2"
        app:layout_row="1"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/Button4"
        style="@style/btnKeyboardStyle"
        app:layout_column="0"
        app:layout_row="2"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/Button5"
        style="@style/btnKeyboardStyle"
        app:layout_column="1"
        app:layout_row="2"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/Button6"
        style="@style/btnKeyboardStyle"
        app:layout_column="2"
        app:layout_row="2"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/Button1"
        style="@style/btnKeyboardStyle"
        app:layout_column="0"
        app:layout_row="3"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/Button2"
        style="@style/btnKeyboardStyle"
        app:layout_column="1"
        app:layout_row="3"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/Button3"
        style="@style/btnKeyboardStyle"
        app:layout_column="2"
        app:layout_row="3"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/Button0"
        style="@style/btnKeyboardStyle"
        app:layout_column="1"
        app:layout_row="4"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/ButtonDot"
        style="@style/btnKeyboardStyle"
        app:layout_column="0"
        app:layout_row="4"
        android:text="@string/btnDot" />

</androidx.gridlayout.widget.GridLayout>